Finalized Product Page + Input Section

--- a/style_guide_page.html
+++ b/style_guide_page.html
@@ -384,35 +384,51 @@
 
           <h4>Sample code</h4>
           <code>
-            &lt;div class="product-listing"&gt;
-              &lt;div class="product-container"&gt;
-                &lt;div class="image-container"&gt;
-                  &lt;a href="#"&gt; &lt;img class="img img-product" src="img/rem.jpg" alt="Ariana Grande Rem Vinyl Record"&gt; &lt;/a&gt;
-                &lt;/div&gt;
-                &lt;h4 class="product-name"&gt;REM Vinyl Record&lt;/h4&gt;
-                &lt;h5 class="artist-name"&gt;Ariana Grande&lt;/h5&gt;
-                &lt;p class="product-price"&gt;$59.99&lt;/p&gt;
-                &lt;a class="btn-primary product-button" href="cart-sample.html"&gt;Add to Cart&lt;/a&gt;
-              &lt;/div&gt;
-              &lt;div class="product-container"&gt;
-                &lt;div class="image-container"&gt;
-                  &lt;a href="#"&gt; &lt;img class="img img-product" src="img/position.jpg" alt="Ariana Grande Positions Vinyl Record"&gt; &lt;/a&gt;
-                &lt;/div&gt;
-                &lt;h4 class="product-name"&gt;Positions Vinyl Record&lt;/h4&gt;
-                &lt;h5 class="artist-name"&gt;Ariana Grande&lt;/h5&gt;
-                &lt;p class="product-price"&gt;$59.99&lt;/p&gt;
-                &lt;a class="btn-primary product-button" href="cart-sample.html"&gt;Add to Cart&lt;/a&gt;
-              &lt;/div&gt;
-              &lt;div class="product-container"&gt;
-                &lt;div class="image-container"&gt;
-                  &lt;a href="#"&gt; &lt;img class="img img-product" src="img/planether1.jpg" alt="Doja Cat Planet Her Vinyl Record"&gt; &lt;/a&gt;
-                &lt;/div&gt;
-                &lt;h4 class="product-name"&gt;Planet Her Vinyl Record&lt;/h4&gt;
-                &lt;h5 class="artist-name"&gt;Doja Cat&lt;/h5&gt;
-                &lt;p class="product-price"&gt;$59.99&lt;/p&gt;
-                &lt;a class="btn-primary product-button" href="cart-sample.html"&gt;Add to Cart&lt;/a&gt;
-              &lt;/div&gt;
-            &lt;/div&gt;
+            &lt;h4>Rendered element &lt;/h4&gt;
+             &lt;div class="product-listing"&gt;
+               &lt;div class="product-container"&gt;
+                 &lt;div class="image-container"&gt;
+                 &lt;a href=#&gt;  &lt;img class="img img-product" src="img/essential-drip-lip-oil.png" alt="Essential Drip Lip Oil"&gt; &lt;/a&gt;
+                 &lt;/div&gt;
+                 &lt;h5 class="product-color"&gt;Lavander Kiss &lt;/h5&gt;
+                 &lt;h4 class="product-name"&gt;Essential Drip Lip Oil &lt;/h4&gt;
+                 &lt;div class="image-container-colors"&gt;
+                   &lt;img class="img img-product" src="img/essential-drip-lip-oil-color1.png" alt="Essential Drip Lip Oil Color Options"&gt;
+                   &lt;img class="img img-product" src="img/essential-drip-lip-oil-color2.png" alt="Essential Drip Lip Oil Color Options"&gt;
+                   &lt;img class="img img-product" src="img/essential-drip-lip-oil-color3.png" alt="Essential Drip Lip Oil Color Options"&gt;
+                   &lt;img class="img img-product" src="img/essential-drip-lip-oil-color4.png" alt="Essential Drip Lip Oil Color Options"&gt;
+                 &lt;/div&gt;
+                 &lt;a class="btn-secondary product-button" href="cart-sample.html"&gt;Add to Cart $17 &lt;/a&gt;
+               &lt;/div&gt;
+
+               &lt;div class="product-container"&gt;
+               &lt;div class="image-container"&gt;
+                   &lt;a href=#&gt; &lt;img class="img img-product" src="img/highlight-topper.png" alt="Highlight Topper"&gt;  &lt;/a&gt;
+               &lt;/div&gt;
+                 &lt;h5 class="product-color"&gt;Miss Neptune &lt;/h5&gt;
+                 &lt;h4 class="product-name"&gt;Highlighter Topper &lt;/h4&gt;
+                 &lt;div class="image-container-colors"&gt;
+                   &lt;img class="img img-product" src="img/highlight-topper-color1.png" alt="LHighlight Topper Color Options"&gt;
+                   &lt;img class="img img-product" src="img/highlight-topper-color2.png" alt="LHighlight Topper Color Options"&gt;
+                 &lt;/div&gt;
+                &lt;a class="btn-secondary product-button" href="cart-sample.html"&gt;Add to Cart $17 &lt;/a&gt;
+               &lt;/div&gt;
+
+               &lt;div class="product-container"&gt;
+               &lt;div class="image-container"&gt;
+                 &lt;a href=#&gt;  &lt;img class="img img-product" src="img/lustrous-liquid-eyeshadow.png" alt="Lustrous Liquid Eyeshadow"&gt;  &lt;/a&gt;
+               &lt;/div&gt;
+                 &lt;h5 class="product-color"&gt;Lab Coat &lt;/h5&gt;
+                 &lt;h4 class="product-name"&gt;Lustrous Liquid Eyeshadow &lt;/h4&gt;
+                 &lt;div class="image-container-colors"&gt;
+                   &lt;img class="img img-product" src="img/lustrous-liquid-eyeshadow-color1.png" alt="Lustrous Liquid Eyeshadow Color Options"&gt;
+                   &lt;img class="img img-product" src="img/lustrous-liquid-eyeshadow-color2.png" alt="Lustrous Liquid Eyeshadow Color Options"&gt;
+                   &lt;img class="img img-product" src="img/lustrous-liquid-eyeshadow-color3.png" alt="Lustrous Liquid Eyeshadow Color Options"&gt;
+                 &lt;/div&gt;
+                 &lt;a class="btn-secondary product-button" href="cart-sample.html"&gt;Add to Cart $17 &lt;/a&gt;
+               &lt;/div&gt;
+             &lt;/div&gt;
+
             </code>
 
             <h4>Rendered element</h4>
@@ -425,19 +441,23 @@
                 <h5 class="product-color">Lavander Kiss</h5>
                 <h4 class="product-name">Essential Drip Lip Oil</h4>
                 <div class="image-container-colors">
-                  <img class="img img-product" src="img/essential-drip-lip-oil-color.png" alt="Essential Drip Lip Oil Color Options">
+                  <img class="img img-product" src="img/essential-drip-lip-oil-color1.png" alt="Essential Drip Lip Oil Color Options">
+                  <img class="img img-product" src="img/essential-drip-lip-oil-color2.png" alt="Essential Drip Lip Oil Color Options">
+                  <img class="img img-product" src="img/essential-drip-lip-oil-color3.png" alt="Essential Drip Lip Oil Color Options">
+                  <img class="img img-product" src="img/essential-drip-lip-oil-color4.png" alt="Essential Drip Lip Oil Color Options">
                 </div>
                 <a class="btn-secondary product-button" href="cart-sample.html">Add to Cart $17</a>
               </div>
 
               <div class="product-container">
               <div class="image-container">
-                  <a href=#> <img class="img img-product" src="img/highlight-topper.png" alt="Highlight Topper"> </a>
+                <a href=#> <img class="img img-product" src="img/highlight-topper.png" alt="Highlight Topper"> </a>
               </div>
-                <h5 class="product-color">Miss Neptune</h5>
+                <h6 class="product-color">Miss Neptune</h6>
                 <h4 class="product-name">Highlighter Topper</h4>
                 <div class="image-container-colors">
-                  <img class="img img-product" src="img/highlight-topper-color.png" alt="LHighlight Topper Color Options">
+                  <img class="img img-product" src="img/highlight-topper-color1.png" alt="LHighlight Topper Color Options">
+                  <img class="img img-product" src="img/highlight-topper-color2.png" alt="LHighlight Topper Color Options">
                 </div>
                 <a class="btn-secondary product-button" href="cart-sample.html">Add to Cart $17</a>
               </div>
@@ -450,7 +470,9 @@
                 <h5 class="product-color">Lab Coat</h5>
                 <h4 class="product-name">Lustrous Liquid Eyeshadow</h4>
                 <div class="image-container-colors">
-                  <img class="img img-product" src="img/lustrous-liquid-eyeshadow-color.png" alt="Lustrous Liquid Eyeshadow Color Options">
+                  <img class="img img-product" src="img/lustrous-liquid-eyeshadow-color1.png" alt="Lustrous Liquid Eyeshadow Color Options">
+                  <img class="img img-product" src="img/lustrous-liquid-eyeshadow-color2.png" alt="Lustrous Liquid Eyeshadow Color Options">
+                  <img class="img img-product" src="img/lustrous-liquid-eyeshadow-color3.png" alt="Lustrous Liquid Eyeshadow Color Options">
                 </div>
                 <a class="btn-secondary product-button" href="cart-sample.html">Add to Cart $17</a>
               </div>
