--- a/style_guide_page.html
+++ b/style_guide_page.html
@@ -7,13 +7,9 @@
 
     <title>Nebula Style Guide</title>
 
-    <link href="css/main.css" rel="stylesheet" />
-    <link href="css/grid.css" rel="stylesheet" />
-    <link href="css/token.css" rel="stylesheet" />
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;700&display=swap" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet" type="text/css">
+    <link href="css/grid.css" rel="stylesheet" type="text/css"/>
+    <link href="css/token.css" rel="stylesheet" type="text/css"/>
 
   </head>
 
