Fixed Product Listing Section
Fixed CSS styles
Removed unused styles
Fixed Product Container
Added Product Listing Container
Made Button Width Max

--- a/style_guide_page.html
+++ b/style_guide_page.html
@@ -430,45 +430,51 @@
             <h4>Rendered element</h4>
             <div class="product-listing">
               
-              <div class="product-container">
-                <div class="image-container">
-                <a href=#> <img class="img img-product" src="img/essential-drip-lip-oil.png" alt="Essential Drip Lip Oil"> </a>
-                </div>
-                <h5 class="product-color">Lavander Kiss</h5>
-                <h4 class="product-name">Essential Drip Lip Oil</h4>
-                <div class="image-container-colors">
-                  <img class="img img-product" src="img/essential-drip-lip-oil-color1.png" alt="Essential Drip Lip Oil Color Options">
-                  <img class="img img-product" src="img/essential-drip-lip-oil-color2.png" alt="Essential Drip Lip Oil Color Options">
-                  <img class="img img-product" src="img/essential-drip-lip-oil-color3.png" alt="Essential Drip Lip Oil Color Options">
-                  <img class="img img-product" src="img/essential-drip-lip-oil-color4.png" alt="Essential Drip Lip Oil Color Options">
-                </div>
-                <a class="btn-secondary product-button" href="cart-sample.html">Add to Cart $17</a>
-              </div>
-
-              <div class="product-container">
-              <div class="image-container">
-                <a href=#> <img class="img img-product" src="img/highlight-topper.png" alt="Highlight Topper"> </a>
-              </div>
-                <h6 class="product-color">Miss Neptune</h6>
-                <h4 class="product-name">Highlighter Topper</h4>
-                <div class="image-container-colors">
-                  <img class="img img-product" src="img/highlight-topper-color1.png" alt="LHighlight Topper Color Options">
-                  <img class="img img-product" src="img/highlight-topper-color2.png" alt="LHighlight Topper Color Options">
+              <div class="product-listing-container">
+                <div class="product-container">
+                  <div class="image-container">
+                   <a href=#> <img class="img img-product" src="img/essential-drip-lip-oil.png" alt="Essential Drip Lip Oil"> </a>
+                  </div>
+                  <h5 class="product-color">Lavender Kiss</h5>
+                  <h4 class="product-name">Essential Drip Lip Oil</h4>
+                  <div class="product-shade-container">
+                    <img class="img product-shade" src="img/essential-drip-lip-oil-color1.png" alt="Essential Drip Lip Oil Color Options">
+                    <img class="img product-shade" src="img/essential-drip-lip-oil-color2.png" alt="Essential Drip Lip Oil Color Options">
+                    <img class="img product-shade" src="img/essential-drip-lip-oil-color3.png" alt="Essential Drip Lip Oil Color Options">
+                    <img class="img product-shade" src="img/essential-drip-lip-oil-color4.png" alt="Essential Drip Lip Oil Color Options">
+                  </div>
                 </div>
                 <a class="btn-secondary product-button" href="cart-sample.html">Add to Cart $17</a>
               </div>
 
-
-              <div class="product-container">
-              <div class="image-container">
-                <a href=#> <img class="img img-product" src="img/lustrous-liquid-eyeshadow.png" alt="Lustrous Liquid Eyeshadow"> </a>
+              <div class="product-listing-container">
+                <div class="product-container">
+                  <div class="image-container">
+                    <a href=#> <img class="img img-product" src="img/highlight-topper.png" alt="Highlight Topper"> </a>
+                  </div>
+                  <h6 class="product-color">Miss Neptune</h6>
+                  <h4 class="product-name">Highlighter Topper</h4>
+                  <div class="product-shade-container">
+                    <img class="img product-shade" src="img/highlight-topper-color1.png" alt="LHighlight Topper Color Options">
+                    <img class="img product-shade" src="img/highlight-topper-color2.png" alt="LHighlight Topper Color Options">
+                  </div>
+                </div>
+                <a class="btn-secondary product-button" href="cart-sample.html">Add to Cart $17</a>
               </div>
-                <h5 class="product-color">Lab Coat</h5>
-                <h4 class="product-name">Lustrous Liquid Eyeshadow</h4>
-                <div class="image-container-colors">
-                  <img class="img img-product" src="img/lustrous-liquid-eyeshadow-color1.png" alt="Lustrous Liquid Eyeshadow Color Options">
-                  <img class="img img-product" src="img/lustrous-liquid-eyeshadow-color2.png" alt="Lustrous Liquid Eyeshadow Color Options">
-                  <img class="img img-product" src="img/lustrous-liquid-eyeshadow-color3.png" alt="Lustrous Liquid Eyeshadow Color Options">
+
+
+              <div class="product-listing-container">
+                <div class="product-container">
+                  <div class="image-container">
+                    <a href=#> <img class="img img-product" src="img/lustrous-liquid-eyeshadow.png" alt="Lustrous Liquid Eyeshadow"> </a>
+                  </div>
+                  <h5 class="product-color">Lab Coat</h5>
+                  <h4 class="product-name">Lustrous Liquid Eyeshadow</h4>
+                  <div class="product-shade-container">
+                    <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color1.png" alt="Lustrous Liquid Eyeshadow Color Options">
+                    <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color2.png" alt="Lustrous Liquid Eyeshadow Color Options">
+                    <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color3.png" alt="Lustrous Liquid Eyeshadow Color Options">
+                  </div>
                 </div>
                 <a class="btn-secondary product-button" href="cart-sample.html">Add to Cart $17</a>
               </div>
