Changed Button Href
Changed Checkout Button Href to a new page

--- a/cart_page.html
+++ b/cart_page.html
@@ -115,7 +115,7 @@
           <p class="total-price final-price">$201.56</p>
         </div>
 
-        <a class="btn-primary checkout-button" href="#">Proceed to Check Out</a>
+        <a class="btn-primary checkout-button" href="checkout.html">Proceed to Check Out</a>
       </div>
     </section>
 
