Cleaned Up Checkout Style Guide Elements
Added 2 and 3 Column Styles on Inputs

--- a/cart_page.html
+++ b/cart_page.html
@@ -66,7 +66,7 @@
               </div>
             </div>
           </div>
-          <input class="quantity-box" type="number" value="1" />
+          <input class="quantity-box" type="number" value="1" min="1"/>
           <p class="total-price">$59.99</p>
 
           <div class="cart-info cart-info-grid">
@@ -84,7 +84,7 @@
               </div>
             </div>
           </div>
-          <input class="quantity-box" type="number" value="1" />
+          <input class="quantity-box" type="number" value="1" min="1"/>
           <p class="total-price">$59.99</p>
 
           <div class="cart-info cart-info-grid">
@@ -102,7 +102,7 @@
               </div>
             </div>
           </div>
-          <input class="quantity-box" type="number" value="1" />
+          <input class="quantity-box" type="number" value="1" min="1"/>
           <p class="total-price">$59.99</p>
         </div>
 
@@ -115,7 +115,7 @@
           <p class="total-price final-price">$201.56</p>
         </div>
 
-        <a class="btn-primary checkout-button" href="checkout.html">Proceed to Check Out</a>
+        <a class="btn btn-secondary checkout-button" href="checkout_page.html">Proceed to Check Out</a>
       </div>
     </section>
 
