--- a/cart_page.html
+++ b/cart_page.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Nebula Style Guide</title>
+    <title>Cart Page</title>
 
     <link href="css/main.css" rel="stylesheet" type="text/css"/>
     <link href="css/grid.css" rel="stylesheet" type="text/css"/>
