Added Home Page

--- a/style_guide_page.html
+++ b/style_guide_page.html
@@ -22,7 +22,7 @@
           <a class="nav-item" href="events_page.html">Events</a>
         </div>
         <a href="style_guide_page.html">
-          <img src="svg/NEBULA.svg" alt="Logo" class="logo" />
+          <img src="svg/NEBULA.svg" alt="Logo" class="logo" href="home_page.html"/>
         </a>
         <div class="nav-flex">
           <a class="nav-item" href="style_guide_page.html">Style Guide</a>
@@ -212,7 +212,7 @@
                   <input type="radio" id="otherradio" name="paymentmethod" value="otherradio">
                   <label class="radio-label" for="otherradio">Other:</label>
                 </div>
-                <input type="text" id="otherTextRadio" name="otherText" class="other-input" placeholder="Specify method...">
+                <input type="text" id="otherTextRadio" name="otherText" class="input other-input" placeholder="Specify method...">
               </div>
             </div>
           </form>
