Added Shop Page
- Added Heading Title Banner
- Added Product Listings

--- a/style_guide_page.html
+++ b/style_guide_page.html
@@ -444,7 +444,7 @@
                     <img class="img product-shade" src="img/essential-drip-lip-oil-color4.png" alt="Essential Drip Lip Oil Color Options">
                   </div>
                 </div>
-                <a class="btn-secondary product-button" href="cart-sample.html">Add to Cart $17</a>
+                <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
               </div>
 
               <div class="product-listing-container">
@@ -459,7 +459,7 @@
                     <img class="img product-shade" src="img/highlight-topper-color2.png" alt="LHighlight Topper Color Options">
                   </div>
                 </div>
-                <a class="btn-secondary product-button" href="cart-sample.html">Add to Cart $17</a>
+                <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
               </div>
 
 
@@ -476,7 +476,7 @@
                     <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color3.png" alt="Lustrous Liquid Eyeshadow Color Options">
                   </div>
                 </div>
-                <a class="btn-secondary product-button" href="cart-sample.html">Add to Cart $17</a>
+                <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
               </div>
             </div>
         </section>
