Finished Shop Page
Added 9 product listings
Changed all images, names, and shades
Fixed paddings and margins

--- a/shop_page.html
+++ b/shop_page.html
@@ -60,8 +60,8 @@
               <h6 class="product-color">Miss Neptune</h6>
               <h4 class="product-name">Highlighter Topper</h4>
               <div class="product-shade-container">
-                <img class="img product-shade" src="img/highlight-topper-color1.png" alt="LHighlight Topper Color Options">
-                <img class="img product-shade" src="img/highlight-topper-color2.png" alt="LHighlight Topper Color Options">
+                <img class="img product-shade" src="img/highlight-topper-color1.png" alt="Highlight Topper Color Options">
+                <img class="img product-shade" src="img/highlight-topper-color2.png" alt="Highlight Topper Color Options">
               </div>
             </div>
             <a class="btn-secondary product-button" href="cart-sample.html">Add to Cart $17</a>
@@ -88,16 +88,10 @@
           <div class="product-listing-container">
             <div class="product-container">
               <div class="image-container">
-              <a href=#> <img class="img img-product" src="img/essential-drip-lip-oil.png" alt="Essential Drip Lip Oil"> </a>
+              <a href=#> <img class="img img-product" src="img/blush-and-lipstick.png" alt="Eclipse Blush & Lipstick"> </a>
               </div>
-              <h5 class="product-color">Lavender Kiss</h5>
-              <h4 class="product-name">Essential Drip Lip Oil</h4>
-              <div class="product-shade-container">
-                <img class="img product-shade" src="img/essential-drip-lip-oil-color1.png" alt="Essential Drip Lip Oil Color Options">
-                <img class="img product-shade" src="img/essential-drip-lip-oil-color2.png" alt="Essential Drip Lip Oil Color Options">
-                <img class="img product-shade" src="img/essential-drip-lip-oil-color3.png" alt="Essential Drip Lip Oil Color Options">
-                <img class="img product-shade" src="img/essential-drip-lip-oil-color4.png" alt="Essential Drip Lip Oil Color Options">
-              </div>
+              <h5 class="product-color">Eclipse</h5>
+              <h4 class="product-name">Blush & Lipstick</h4>
             </div>
             <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
           </div>
@@ -105,14 +99,10 @@
           <div class="product-listing-container">
             <div class="product-container">
               <div class="image-container">
-                <a href=#> <img class="img img-product" src="img/highlight-topper.png" alt="Highlight Topper"> </a>
+                <a href=#> <img class="img img-product" src="img/satin-matte-blush.png" alt="Hypernova Satin Matte Blush"> </a>
               </div>
-              <h6 class="product-color">Miss Neptune</h6>
-              <h4 class="product-name">Highlighter Topper</h4>
-              <div class="product-shade-container">
-                <img class="img product-shade" src="img/highlight-topper-color1.png" alt="LHighlight Topper Color Options">
-                <img class="img product-shade" src="img/highlight-topper-color2.png" alt="LHighlight Topper Color Options">
-              </div>
+              <h6 class="product-color">Hypernova</h6>
+              <h4 class="product-name">Satin Matte Blush</h4>
             </div>
             <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
           </div>
@@ -120,33 +110,23 @@
           <div class="product-listing-container">
             <div class="product-container">
               <div class="image-container">
-                <a href=#> <img class="img img-product" src="img/lustrous-liquid-eyeshadow.png" alt="Lustrous Liquid Eyeshadow"> </a>
+                <a href=#> <img class="img img-product" src="img/matte-lipstick.png" alt="Drive In Movie Matte Lipstick"> </a>
               </div>
-              <h5 class="product-color">Lab Coat</h5>
-              <h4 class="product-name">Lustrous Liquid Eyeshadow</h4>
-              <div class="product-shade-container">
-                <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color1.png" alt="Lustrous Liquid Eyeshadow Color Options">
-                <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color2.png" alt="Lustrous Liquid Eyeshadow Color Options">
-                <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color3.png" alt="Lustrous Liquid Eyeshadow Color Options">
-              </div>
+              <h5 class="product-color">Drive In Movie</h5>
+              <h4 class="product-name">Matte Lipstick</h4>
             </div>
             <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
           </div>
         </div>
+
         <div class="product-listing">
           <div class="product-listing-container">
             <div class="product-container">
               <div class="image-container">
-              <a href=#> <img class="img img-product" src="img/essential-drip-lip-oil.png" alt="Essential Drip Lip Oil"> </a>
+              <a href=#> <img class="img img-product" src="img/plumping-lip-gloss.png" alt="On Your Collar Plumping Lip Gloss"> </a>
               </div>
-              <h5 class="product-color">Lavender Kiss</h5>
-              <h4 class="product-name">Essential Drip Lip Oil</h4>
-              <div class="product-shade-container">
-                <img class="img product-shade" src="img/essential-drip-lip-oil-color1.png" alt="Essential Drip Lip Oil Color Options">
-                <img class="img product-shade" src="img/essential-drip-lip-oil-color2.png" alt="Essential Drip Lip Oil Color Options">
-                <img class="img product-shade" src="img/essential-drip-lip-oil-color3.png" alt="Essential Drip Lip Oil Color Options">
-                <img class="img product-shade" src="img/essential-drip-lip-oil-color4.png" alt="Essential Drip Lip Oil Color Options">
-              </div>
+              <h5 class="product-color">On Your Collar</h5>
+              <h4 class="product-name">Plumping Lip Gloss</h4>
             </div>
             <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
           </div>
@@ -154,14 +134,10 @@
           <div class="product-listing-container">
             <div class="product-container">
               <div class="image-container">
-                <a href=#> <img class="img img-product" src="img/highlight-topper.png" alt="Highlight Topper"> </a>
+                <a href=#> <img class="img img-product" src="img/kohl-eyeliner-pencil.png" alt="At the Borderline Kohl Eyeliner Pencil"> </a>
               </div>
-              <h6 class="product-color">Miss Neptune</h6>
-              <h4 class="product-name">Highlighter Topper</h4>
-              <div class="product-shade-container">
-                <img class="img product-shade" src="img/highlight-topper-color1.png" alt="LHighlight Topper Color Options">
-                <img class="img product-shade" src="img/highlight-topper-color2.png" alt="LHighlight Topper Color Options">
-              </div>
+              <h6 class="product-color">At the Borderline</h6>
+              <h4 class="product-name">Kohl Eyeliner Pencil</h4>
             </div>
             <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
           </div>
@@ -169,15 +145,10 @@
           <div class="product-listing-container">
             <div class="product-container">
               <div class="image-container">
-                <a href=#> <img class="img img-product" src="img/lustrous-liquid-eyeshadow.png" alt="Lustrous Liquid Eyeshadow"> </a>
+                <a href=#> <img class="img img-product" src="img/lip-stain-marker.png" alt="Practically Permanent Lip Stain Marker"> </a>
               </div>
-              <h5 class="product-color">Lab Coat</h5>
-              <h4 class="product-name">Lustrous Liquid Eyeshadow</h4>
-              <div class="product-shade-container">
-                <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color1.png" alt="Lustrous Liquid Eyeshadow Color Options">
-                <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color2.png" alt="Lustrous Liquid Eyeshadow Color Options">
-                <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color3.png" alt="Lustrous Liquid Eyeshadow Color Options">
-              </div>
+              <h5 class="product-color">Practically Permanent</h5>
+              <h4 class="product-name">Lip Stain Marker</h4>
             </div>
             <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
           </div>
