--- a/style_guide_page.html
+++ b/style_guide_page.html
@@ -455,8 +455,8 @@
                   <h6 class="product-color">Miss Neptune</h6>
                   <h4 class="product-name">Highlighter Topper</h4>
                   <div class="product-shade-container">
-                    <img class="img product-shade" src="img/highlight-topper-color1.png" alt="LHighlight Topper Color Options">
-                    <img class="img product-shade" src="img/highlight-topper-color2.png" alt="LHighlight Topper Color Options">
+                    <img class="img product-shade" src="img/highlight-topper-color1.png" alt="Highlight Topper Color Options">
+                    <img class="img product-shade" src="img/highlight-topper-color2.png" alt="Highlight Topper Color Options">
                   </div>
                 </div>
                 <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
