--- a/checkout_page.html
+++ b/checkout_page.html
@@ -20,7 +20,7 @@
           <a class="nav-item" href="events_page.html">Events</a>
         </div>
         <a href="style_guide_page.html">
-          <img src="svg/NEBULA.svg" alt="Logo" class="logo" />
+          <img src="svg/NEBULA.svg" alt="Logo" class="logo" href="home_page.html"/>
         </a>
         <div class="nav-flex">
           <a class="nav-item" href="style_guide_page.html">Style Guide</a>
