--- a/checkout_page.html
+++ b/checkout_page.html
@@ -19,8 +19,8 @@
           <a class="nav-item" href="about_page.html">About</a>
           <a class="nav-item" href="events_page.html">Events</a>
         </div>
-        <a href="style_guide_page.html">
-          <img src="svg/NEBULA.svg" alt="Logo" class="logo" href="home_page.html"/>
+        <a href="home_page.html">
+          <img src="svg/NEBULA.svg" alt="Logo" class="logo"/>
         </a>
         <div class="nav-flex">
           <a class="nav-item" href="style_guide_page.html">Style Guide</a>
